Fixed Experience component header text scale on mobile and smaller screens

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -15,7 +15,7 @@
       margin-bottom: 1.5rem;
 
       @media screen and (max-width: 900px) {
-        font-size: 2rem;
+        font-size: 3rem;
       }
     }
 
